--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "https-browserify": "^1.0.0",
     "i": "^0.3.7",
+    "jspdf": "^3.0.0",
     "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
